--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Updated fingerprints for script http-default-accounts with 16 new
+  fingerprints. 4 fingerprints have been broadened to cover more variants.
+  [nnposter]
+
 o [NSE][GH#577] Script http-default-accounts now can test systems that return
   status 200 for non-existent pages. [nnposter]
 
