--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE] Script tn3270-screen shows the login screen from mainframe TN3270
+  Telnet services, including any hidden fields. The script is accompanied by
+  the new tn3270 library. [Soldier of Fortran]
+
 o [NSE] Script nje-pass-brute brute-forces the password to a NJE node, given a
   valid RHOST and OHOST. Helpfully, nje-node-brute can now brute force both of
   those values. [Soldier of Fortran]
