--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Nmap Changelog ($Id$); -*-text-*-
 
+o [NSE][GH#627] Fixed script hang in several brute scripts due to the "threads"
+  script-arg not being converted to a number. Error message was
+  "nselib/brute.lua:1188: attempt to compare number with string" [Arne Beer]
+
 Nmap 7.40 [2016-12-20]
 
 o [Windows] Updated the bundled Npcap from 0.10r9 to 0.78r5, with an
